@@ -2,7 +2,8 @@
 <xsl:stylesheet version="1.0"
   xmlns:xsl="http://www.w3.org/1999/XSL/Transform">
 
-  <xsl:param name="make.year.ranges">1</xsl:param>
-  <xsl:param name="make.single.year.ranges">1</xsl:param>
+  <xsl:param name="make.year.ranges" select="1"/>
+  <xsl:param name="make.single.year.ranges" select="1"/>
+  <xsl:param name="use.id.as.filename" select="1"/>
 
 </xsl:stylesheet>
